deployment/k8s-new-services-deployment.yaml
###################################
# Utility
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utility
  labels:
    app: utility
spec:
  replicas: 1
  selector:
    matchLabels:
      app: utility
  template:
    metadata:
      labels:
        app: utility
    spec:
      containers:
        - name: utility
          image: us-central1-docker.pkg.dev/miso-first-project-396722/grupo17-registry/utility:1.0
          ports:
            - containerPort: 8000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: service-utility
  annotations:
    cloud.google.com/backend-config: '{"default": "grupo17-utility-config"}'
spec:
  type: NodePort
  selector:
    app: utility
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31014
---
###################################
# Entrega2 RF003, RF004, RF005
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entrega2
  labels:
    app: entrega2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: entrega2
  template:
    metadata:
      labels:
        app: entrega2
    spec:
      containers:
        - name: entrega2
          image: us-central1-docker.pkg.dev/miso-first-project-396722/grupo17-registry/entrega2:0.3
          ports:
            - containerPort: 8000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: service-entrega2
  annotations:
    cloud.google.com/backend-config: '{"default": "grupo17-entrega2-config"}'
spec:
  type: NodePort
  selector:
    app: entrega2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31015
