deployment/k8s-ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
  labels:
    name: gateway-ingress-8
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: service-users
            port:
              number: 80
      - pathType: Prefix
        path: /routes
        backend:
          service:
            name: service-routes
            port:
              number: 80
      - pathType: Prefix
        path: /posts
        backend:
          service:
            name: service-posts
            port:
              number: 80
      - pathType: Prefix
        path: /offers
        backend:
          service:
            name: service-offers
            port:
              number: 80
      - pathType: Prefix
        path: /utility
        backend:
          service:
            name: service-utility
            port:
              number: 80
      - pathType: Prefix
        path: /rf005
        backend:
          service:
            name: service-entrega2
            port:
              number: 80
      - pathType: Prefix
        path: /rf004
        backend:
          service:
            name: service-entrega2
            port:
              number: 80
      - pathType: Prefix
        path: /rf005
        backend:
          service:
            name: service-entrega2
            port:
              number: 80
